add GC Log Options