@@ -26,9 +26,10 @@ JAVA_OPTS="$JAVA_OPTS -XX:+UseCMSInitiatingOccupancyOnly"
 JAVA_OPTS="$JAVA_OPTS -XX:CMSInitiatingOccupancyFraction=75"
 
 #GC Log Options
-#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCApplicationStoppedTime"
-#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCTimeStamps"
-#JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
+JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCApplicationStoppedTime"
+JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps"
+JAVA_OPTS="$JAVA_OPTS -XX:+PrintGCDetails"
+JAVA_OPTS="$JAVA_OPTS -Xloggc:/applogs/urc/serviceProvider/serviceProvider_gc.log"
 #debug Options
 JAVA_OPTS="$JAVA_OPTS -Xdebug -Xrunjdwp:transport=dt_socket,address=8065,server=y,suspend=n"
 #==============================================================================
